[project]
name = "grants_shared"
version = "0.1.1"
description = "Shared utilities for Simpler Grants.gov backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/grants_shared"]

[tool.hatch.build.targets.wheel]
include = ["src/grants_shared"]

[tool.hatch.build.targets.wheel.sources]
"src/grants_shared" = "grants_shared"