[project]
name = "shared_sgg"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/shared_sgg"]

[tool.hatch.build.targets.wheel]
include = ["src/shared_sgg"]

[tool.hatch.build.targets.wheel.sources]
"src/shared_sgg" = "shared_sgg"